# noditto

./: .dir-locals.el  .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  codecov.yaml  conan_install_deps.sh  conanfile.py  hello_0.cpp
.github/workflows/: ci.yml  install.yml  standalone.yml
cmake/: dev-mode.cmake  install-rules.cmake  spell.cmake  variables.cmake
documentation/: CMakeLists.txt  conf.py
include/noditto/: hello.h
include/noditto/commons/: log_commons.hpp
include/noditto/lexer/: lexer.h  lexer.hpp  token.h  token.hpp  token_type.h  token_type.hpp
include/noditto/util/: file_util.hpp  tostring.hpp
sample/: hello_0.cpp
source/: file_util.cpp  lexer.cpp  main.cpp  tostring.cpp
src/: hello.cpp
src/lexer/: lexer.cpp
standalone/: CMakeLists.txt
standalone/src/: main.cpp
test/: CMakeLists.txt
test/source/: noditto_test.cpp
